# vrchat-avatarpreview

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json
src/: main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/extractor/: mod.rs
src-tauri/src/parser/: classifier.rs  guid_map.rs  material.rs  mod.rs  prefab.rs  shader_compat.rs
src-tauri/src/resolver/: mod.rs
src-tauri/src/scene/: mod.rs
src/panels/: blend-shape-panel.ts  object-panel.ts  shader-panel.ts  stats-bar.ts  warnings-panel.ts
src/store/: scene.ts
src/styles/: main.css  panels.css  reset.css  tokens.css  viewer-layout.css  welcome.css
src/types/: scene.ts
src/viewer/: blend-shapes.ts  loader.ts  material-mapper.ts  scene.ts
src/views/: viewer.ts  welcome.ts
