[package]
name = "vrcstorage-avatarpreview"
version = "0.1.0"
description = "VRCStorage avatar .unitypackage previewer"
authors = ["SummerTYT <vicentefelipechile>"]
edition = "2021"

[lib]
name = "vrcstorage_avatarpreview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
anyhow       = "1"
thiserror    = "2"
flate2       = "1"
tar          = "0.4"
regex        = "1"
uuid         = { version = "1", features = ["v4"] }
